src/objects/PANG_EXPERT_Member__c.object
<CustomObject>
    <description>Used to identify a Salesforce User as an RWE EXPERT</description>
    <fields>
        <fullName>Area_of_Expertise__c</fullName>
        <label>Area of Expertise</label>
        <picklist>
            <picklistValues>
                <fullName>ADHD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alzheimers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ankylosing Spondylitis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anxiety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bayesian Methods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bipolar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost and Resource Use Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross Therapeutic Expertise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DataMart SME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Depression</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes (Humatrope-Specific)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSS Obs. Research Process Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EU Study Requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FDAMA114</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FDAMA114 Hub Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FDAMA 114 Hub Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insomnia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meta-Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Osteoporosis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Painful Conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Reported Outcomes/COA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pediatrics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospective Observational Studies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psoriasis</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DataLoad_ID__c</fullName>
        <externalId>true</externalId>
        <label>DataLoad ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPERT_Member_Functional_Area__c</fullName>
        <label>EXPERT Member Functional Area</label>
        <picklist>
            <picklistValues>
                <fullName>CDIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPORWE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEDICAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER (BIOMETRICS, REGULATORY ETC.)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EXPERT_Member_Role__c</fullName>
        <label>EXPERT Member Role</label>
        <picklist>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extended Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRC Liaison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewer</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>EXPERT_Member_Status__c</fullName>
        <label>EXPERT Member Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Governing_SOP_Expertise__c</fullName>
        <label>Governing SOP Expertise</label>
        <picklist>
            <picklistValues>
                <fullName>FDAMA114</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PMSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pragmatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retrospective</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Region_Expertise__c</fullName>
        <label>Region Expertise</label>
        <picklist>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emerging Markets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JP PMSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taiwan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Salesforce_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RWE_EXPERTS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Therapeutic_Area__c</fullName>
        <label>Therapeutic Area</label>
        <picklist>
            <picklistValues>
                <fullName>Cardiovascular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alzheimer&apos;s &amp; Neurodegenerative Diseases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychiatry &amp; Pain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autoimmune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bone, Muscle, Joint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Business Unit-Specific</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>RWE EXPERT Member</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EXPERT_Member_Role__c</columns>
        <columns>Area_of_Expertise__c</columns>
        <columns>EXPERT_Member_Functional_Area__c</columns>
        <columns>Therapeutic_Area__c</columns>
        <columns>Region_Expertise__c</columns>
        <columns>EXPERT_Member_Status__c</columns>
        <columns>Governing_SOP_Expertise__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EXPERT_Member_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Autoimmune</fullName>
        <columns>NAME</columns>
        <columns>EXPERT_Member_Status__c</columns>
        <columns>EXPERT_Member_Role__c</columns>
        <columns>EXPERT_Member_Functional_Area__c</columns>
        <columns>Therapeutic_Area__c</columns>
        <columns>Area_of_Expertise__c</columns>
        <columns>Region_Expertise__c</columns>
        <columns>Governing_SOP_Expertise__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Therapeutic_Area__c</field>
            <operation>includes</operation>
            <value>Autoimmune</value>
        </filters>
        <filters>
            <field>EXPERT_Member_Functional_Area__c</field>
            <operation>equals</operation>
            <value>GPORWE,GPS,&quot;OTHER (BIOMETRICS, REGULATORY ETC.)&quot;</value>
        </filters>
        <filters>
            <field>EXPERT_Member_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>EXPERT_Member_Role__c</field>
            <operation>equals</operation>
            <value>Reviewer</value>
        </filters>
        <label>Autoimmune</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Cardio_in_US_and_or_Japan</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
        <columns>NAME</columns>
        <columns>EXPERT_Member_Status__c</columns>
        <columns>EXPERT_Member_Role__c</columns>
        <columns>Area_of_Expertise__c</columns>
        <columns>EXPERT_Member_Functional_Area__c</columns>
        <columns>Therapeutic_Area__c</columns>
        <columns>Region_Expertise__c</columns>
        <columns>Governing_SOP_Expertise__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Therapeutic_Area__c</field>
            <operation>includes</operation>
            <value>Cardiovascular</value>
        </filters>
        <filters>
            <field>EXPERT_Member_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Region_Expertise__c</field>
            <operation>includes</operation>
            <value>US</value>
        </filters>
        <filters>
            <field>Region_Expertise__c</field>
            <operation>includes</operation>
            <value>Japan</value>
        </filters>
        <label>Cardio in US and/or Japan</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Cardiovascular</fullName>
        <columns>NAME</columns>
        <columns>EXPERT_Member_Status__c</columns>
        <columns>EXPERT_Member_Role__c</columns>
        <columns>EXPERT_Member_Functional_Area__c</columns>
        <columns>Therapeutic_Area__c</columns>
        <columns>Area_of_Expertise__c</columns>
        <columns>Region_Expertise__c</columns>
        <columns>Governing_SOP_Expertise__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Therapeutic_Area__c</field>
            <operation>includes</operation>
            <value>Cardiovascular</value>
        </filters>
        <filters>
            <field>EXPERT_Member_Functional_Area__c</field>
            <operation>equals</operation>
            <value>GPORWE,GPS,&quot;OTHER (BIOMETRICS, REGULATORY ETC.)&quot;</value>
        </filters>
        <filters>
            <field>EXPERT_Member_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>EXPERT_Member_Role__c</field>
            <operation>equals</operation>
            <value>Reviewer</value>
        </filters>
        <label>Cardiovascular</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Cardiovascular_GPS</fullName>
        <columns>NAME</columns>
        <columns>EXPERT_Member_Status__c</columns>
        <columns>EXPERT_Member_Role__c</columns>
        <columns>Area_of_Expertise__c</columns>
        <columns>EXPERT_Member_Functional_Area__c</columns>
        <columns>Therapeutic_Area__c</columns>
        <columns>Region_Expertise__c</columns>
        <columns>Governing_SOP_Expertise__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Therapeutic_Area__c</field>
            <operation>includes</operation>
            <value>Cardiovascular</value>
        </filters>
        <filters>
            <field>EXPERT_Member_Functional_Area__c</field>
            <operation>equals</operation>
            <value>GPS</value>
        </filters>
        <filters>
            <field>EXPERT_Member_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Cardiovascular/GPS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Created_Today</fullName>
        <columns>NAME</columns>
        <columns>Area_of_Expertise__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Created Today</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Diabetes</fullName>
        <columns>NAME</columns>
        <columns>EXPERT_Member_Status__c</columns>
        <columns>EXPERT_Member_Role__c</columns>
        <columns>Area_of_Expertise__c</columns>
        <columns>EXPERT_Member_Functional_Area__c</columns>
        <columns>Therapeutic_Area__c</columns>
        <columns>Region_Expertise__c</columns>
        <columns>Governing_SOP_Expertise__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Therapeutic_Area__c</field>
            <operation>includes</operation>
            <value>Diabetes</value>
        </filters>
        <filters>
            <field>EXPERT_Member_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Diabetes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Executive_Team</fullName>
        <columns>NAME</columns>
        <columns>EXPERT_Member_Role__c</columns>
        <columns>Area_of_Expertise__c</columns>
        <columns>EXPERT_Member_Functional_Area__c</columns>
        <columns>Therapeutic_Area__c</columns>
        <columns>Region_Expertise__c</columns>
        <columns>EXPERT_Member_Status__c</columns>
        <columns>Governing_SOP_Expertise__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EXPERT_Member_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>EXPERT_Member_Role__c</field>
            <operation>equals</operation>
            <value>Executive Team</value>
        </filters>
        <label>Executive Team</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Oncology_Only</fullName>
        <columns>NAME</columns>
        <columns>EXPERT_Member_Status__c</columns>
        <columns>EXPERT_Member_Role__c</columns>
        <columns>Area_of_Expertise__c</columns>
        <columns>EXPERT_Member_Functional_Area__c</columns>
        <columns>Therapeutic_Area__c</columns>
        <columns>Region_Expertise__c</columns>
        <columns>Governing_SOP_Expertise__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Therapeutic_Area__c</field>
            <operation>equals</operation>
            <value>Oncology</value>
        </filters>
        <filters>
            <field>EXPERT_Member_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Oncology Only</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>EXPERT Member</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RWE EXPERTS Members</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>